--- a/app/globals.css
+++ b/app/globals.css
@@ -138,4 +138,7 @@
   body {
     @apply bg-background text-foreground;
   }
+  .hoverEffect {
+    @apply transition-all duration-300 ease-in-out;
+  }
 }
