feat: add sidemenu

--- a/app/globals.css
+++ b/app/globals.css
@@ -141,4 +141,7 @@
   .hoverEffect {
     @apply transition-all duration-300 ease-in-out;
   }
+  button {
+    @apply hover:cursor-pointer;
+  }
 }
